objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Work_Order_Pass_Through_Margin_perc__c</fullName>
        <formula>IF(Work_Order_Pass_Through_Revenue__c=0,0,Work_Order_Pass_Through_Margin__c / Work_Order_Pass_Through_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Pass Through Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Work_Order_Pass_Through_Revenue__c</fullName>
        <label>Work Order Pass Through Revenue</label>
        <summarizedField>Usage_FSL__c.Total_Pass_Through_Revenue__c</summarizedField>
        <summaryForeignKey>Usage_FSL__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Performed_Notes__c</fullName>
        <label>Work Performed Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Invoice_Created__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Work_Orders</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>ServiceContract</columns>
        <columns>Site_Name__c</columns>
        <columns>Site_Contact__c</columns>
        <columns>Customer_s_Reference__c</columns>
        <columns>Schedule_Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Work Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Escalated</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>ServiceContract</columns>
        <columns>Site_Name__c</columns>
        <columns>Site_Contact__c</columns>
        <columns>Customer_s_Reference__c</columns>
        <columns>Schedule_Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <label>Escalated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>ServiceContract</columns>
        <columns>Customer_s_Reference__c</columns>
        <columns>Scheduled_Date_and_Time__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NCR_Email_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>NCR Email</label>
        <queue>NCR_Email</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>To_Be_Invoiced</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Week_Ending__c</columns>
        <columns>Invoice_Created__c</columns>
        <columns>ServiceContract</columns>
        <columns>Customer_s_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Invoice_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Week_Ending__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>To Be Invoiced</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Master_Work_Order</fullName>
        <active>true</active>
        <label>Master Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only_Tech</fullName>
        <active>true</active>
        <label>Read Only Tech</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Edit</fullName>
        <active>true</active>
        <label>Service Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Edit_Call</fullName>
        <active>true</active>
        <label>Service Edit Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Service</fullName>
        <active>true</active>
        <label>Standard Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CHGC_Reason</fullName>
        <active>true</active>
        <description>CHGC Reason is required when CHGC is Yes</description>
        <errorConditionFormula>RecordType.Name  &lt;&gt; &apos;Master Work Order&apos;
&amp;&amp; ISPICKVAL( CHGC__c  , &apos;Yes&apos;) 
&amp;&amp; (ISBLANK( CHGC_Reason__c ))</errorConditionFormula>
        <errorMessage>Please enter a CHGC reason as CHGC is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancelled_Reason</fullName>
        <active>true</active>
        <description>When status is changed to Cancelled then a cancelled reason is required</description>
        <errorConditionFormula>AND(ISPICKVAL( Status , &apos;Cancelled&apos;), ISBLANK( Cancelled_Reason__c )  )</errorConditionFormula>
        <errorDisplayField>Cancelled_Reason__c</errorDisplayField>
        <errorMessage>A Cancelled Reason is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Status_from_Closed</fullName>
        <active>true</active>
        <description>Cannot change a Work Order Status from Closed

AND(PRIORVALUE( Status )&lt;&gt;&apos;Closed&apos;, 

ISCHANGED(Status), 

NOT( ISPICKVAL(Status, &apos;Closed&apos;) ))</description>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp;  TEXT( PRIORVALUE( Status) ) = &apos;Closed&apos;</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Unable to change a Work Order status from Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Created_WorkOrder</fullName>
        <active>true</active>
        <errorConditionFormula>Invoice_Created__c = true
&amp;&amp; NOT((PRIORVALUE(  Invoice_Created__c ))=false)</errorConditionFormula>
        <errorMessage>Cannot update record once invoice has been created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Created_Work_Order_Service</fullName>
        <active>true</active>
        <description>If the Invoice created checkbox is ticked on the WO Service then the WO service cannot be updated</description>
        <errorConditionFormula>RecordType.Name  &lt;&gt; &quot;Master Work Order&quot;
&amp;&amp; WOService_Invoice_Created__c = true
&amp;&amp; NOT((PRIORVALUE( WOService_Invoice_Created__c ))=false)</errorConditionFormula>
        <errorMessage>The Work Order Service cannot be updated as the Invoice has been created for the Master Work order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Created_on_Close_Only</fullName>
        <active>true</active>
        <description>Can only check invoice created if Work Order is closed</description>
        <errorConditionFormula>NOT(ISPICKVAL( Status , &apos;Closed&apos;))&amp;&amp;  Invoice_Created__c   =True</errorConditionFormula>
        <errorDisplayField>Invoice_Created__c</errorDisplayField>
        <errorMessage>Invoice Created can only be checked if Work Order is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_New</fullName>
        <active>true</active>
        <description>Cannot change a status back to New</description>
        <errorConditionFormula>ISCHANGED(Status)  &amp;&amp; TEXT(Status)=&apos;New&apos;</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Cannot change a Work order status back to new</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Onsite_Time_After_the_Travel_End</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name  &lt;&gt; &quot;Master Work Order&quot;
&amp;&amp;  Start_Onsite_Date_Time__c &lt; Travel_End_Date_Time__c</errorConditionFormula>
        <errorMessage>Onsite Time needs to be after the Travel End time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SLA_Required</fullName>
        <active>true</active>
        <description>If Service Contract has a SLA and no SLA is selected then an error will occur</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;Master Work Order&quot; , SLA_Count__c &lt;&gt;0, ISBLANK( SLA__c ))</errorConditionFormula>
        <errorDisplayField>SLA__c</errorDisplayField>
        <errorMessage>This Service Contract has related SLA&apos;s, please select a SLA</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Break_Time_minutes_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name  &lt;&gt; &apos;Master Work Order&apos;
&amp;&amp;  $Profile.Name =&apos;Field Service Technician Community&apos;
&amp;&amp;  ISCHANGED( Status) 
&amp;&amp;  (ISPICKVAL( PRIORVALUE( Status ),&apos;Onsite&apos;) 
&amp;&amp;  (ISPICKVAL( Status ,&apos;Completed&apos;) 
||  ISPICKVAL( Status ,&apos;Incomplete&apos;)))
&amp;&amp;  ISBLANK(ParentWorkOrder.Total_Break_Time_minutes__c)</errorConditionFormula>
        <errorMessage>Please add data to Total Break Time (minutes) field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Travel_End_time_after_the_Travel_Start</fullName>
        <active>true</active>
        <description>Technician cannot change the Travel End time to be before the Travel Start time.</description>
        <errorConditionFormula>RecordType.Name  &lt;&gt; &apos;Master Work Order&apos;
&amp;&amp; Travel_Start_Date_Time__c &gt; Travel_End_Date_Time__c</errorConditionFormula>
        <errorMessage>The Travel End time needs to be after the Travel Start time</errorMessage>
    </validationRules>
</CustomObject>